--- a/views/index.html
+++ b/views/index.html
@@ -4,25 +4,33 @@
     <title>Anonymous Message Board</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./public/style.css">
+    <link rel="stylesheet" href="../public/index.css">
   </head>
   <body>
     <header>
       <h1>
-        Anonymous Message Board
+        Chuck's Anonymous Message Boards
       </h1>
     </header>
     <main>
       <h2>
-        Visit a message board or create a new one:
+        Visit a message board or create a new one
       </h2>
-      <div id="existing-board-list-container">
-      <div id="new-board-input-container">
-        <input id="board-input" type="text" placeholder="Name your message board">
-        <button type="button" id="create-board-btn">Create new message board</button>
+      <div id="main-container">
+        <div id="existing-boards-container">
+          <h3>Existing boards:</h3>
+          <ul id="existing-board-list">
+            <li>Test Board</li>
+          </ul>
+        </div>
+        <div id="new-board-input-container">
+          <h3>Create a new board:</h3>
+          <input id="board-input" type="text">
+          <button type="button" id="create-board-btn">Submit</button>
+        </div>
       </div>
     </main>
-    <script>
+    <script src="./public/index.js">
     </script>
   </body>
 </html>
