--- a/views/thread.html
+++ b/views/thread.html
@@ -4,7 +4,7 @@
     <title>Anonymous Message Board</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../public/thread.css">
+    <link rel="stylesheet" href="/public/thread.css">
   </head>
   <body>
     <header>
@@ -48,7 +48,7 @@
         </div>
       </div>
     </main>
-    <script src="public/thread.js">
+    <script src="/public/thread.js">
     </script>
   </body>
 </html>
