--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,8 @@ html {
   height: 100vh;
   width: 100vw;
   font-family: "Courier New", Courier, monospace;
+  background-color: black;
+  color: #63F74F
 }
 
 body {
@@ -14,8 +16,13 @@ body {
   align-items: center
 }
 
+header {
+  margin-top: 75px
+}
+
 h2 {
-  align-self: flex-start
+  align-self: flex-start;
+  color: white
 }
 
 main {
@@ -49,9 +56,44 @@ main {
 }
 
 input {
-  margin-bottom: 10px
+  margin-bottom: 10px;
+  font-family: "Courier New", Courier, monospace;
+  background-color: black;
+  border: 2px solid white;
+  color: #63F74F;
+  padding: 10px;
+  border-radius: 5px;
+  overflow: none;
+  margin-top: 10px
 }
 
-input, button {
-  font-family: "Courier New", Courier, monospace
+input:focus {
+  outline: none;
+  box-shadow: none;
+  border: 2px solid #63F74F; 
+}
+
+button {
+  background-color: black;
+  border: 2px solid #63F74F;
+  color: #63F74F;
+  font-family: "Courier New", Courier, monospace;
+  padding: 10px;
+  border-radius: 5px;
+  overflow: none;
+  margin-top: 10px
+}
+
+button:hover {
+  background-color: #16e60f;
+  color: black;
+  transform: scale(1.1);
+  cursor: pointer;
+  user-select: none;
+  transition: background-color 0.2s ease, transform 0.1s ease;
+  border-radius: 5px;
+}
+
+button:active {
+  transform: perspective(500px) rotateY(30deg);
 }
