--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <title>Anonymous Message Board</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="public/index.css">
+    <link rel="stylesheet" href="/public/index.css">
   </head>
   <body>
     <header>
