--- a/views/thread.html
+++ b/views/thread.html
@@ -4,7 +4,7 @@
     <title>Anonymous Message Board</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/thread.css">
+    <link rel="stylesheet" href="../public/thread.css">
   </head>
   <body>
     <header>
@@ -22,7 +22,7 @@
     </header>
     <main>
       <div id="reply-input-container">
-        <textarea id="reply-text-input" required></textarea>
+        <textarea id="reply-text-input" placeholder="Reply text..."></textarea>
         <div id="reply-input-subcontainer">
           <input id="reply-password" type="text" placeholder="password to delete reply" size="24">
           <button type="button" id="post-reply-btn">Reply</button>
