--- a/public/board.css
+++ b/public/board.css
@@ -2,6 +2,8 @@ html {
     height: 100vh;
     width: 100vw;
     font-family: "Courier New", Courier, monospace;
+    background-color: black;
+    color: #63F74F
 }
   
 body {
@@ -21,11 +23,31 @@ main {
     flex-direction: column
 }
 
+header {
+    margin-top: 75px
+}
+
 textarea {
     height: 10%;
     margin-bottom: 10px;
     font-family: "Courier New", Courier, monospace;
-    width: 60%
+    width: 60%;
+    background-color: black;
+    border: 2px solid white;
+    color: #63F74F;
+    padding: 10px;
+    border-radius: 5px;
+    overflow: none;
+}
+
+textarea:focus {
+    outline: none;
+    box-shadow: none;
+    border: 2px solid #63F74F; 
+}
+
+textarea::placeholder {
+    color: #63F74F
 }
 
 input {
@@ -33,14 +55,47 @@ input {
     font-family: "Courier New", Courier, monospace;
     width: 171px;
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    background-color: black;
+    border: 2px solid white;
+    border-radius: 5px;
+    color: #63F74F
+}
+
+input:focus {
+    outline: none;
+    box-shadow: none;
+    border: 2px solid #63F74F; 
+}
+
+input::placeholder {
+    color: #63F74F
 }
 
 button {
     font-family: "Courier New", Courier, monospace;
     width: 175px;
-    padding: 0
+    background-color: black;
+    border: 2px solid #63F74F;
+    color: #63F74F;
+    padding: 10px;
+    border-radius: 5px;
+    overflow: none;
 }
+
+button:hover {
+    background-color: #16e60f;
+    color: black;
+    transform: scale(1.1);
+    cursor: pointer;
+    user-select: none;
+    transition: background-color 0.2s ease, transform 0.1s ease;
+    border-radius: 5px;
+  }
+  
+  button:active {
+    transform: perspective(500px) rotateY(30deg);
+  }
 
 #threads-container {
     width: 100%;
