--- a/public/index.css
+++ b/public/index.css
@@ -35,7 +35,18 @@ main {
 #h3-container {
   display: flex;
   justify-content: space-between;
-  width: 100%
+  width: 100%;
+  margin: 0
+}
+
+h3 {
+  margin: 0;
+  margin-bottom: 40px;
+  margin-top: 20px
+}
+
+#existing-boards-header {
+  margin-bottom: 36px
 }
 
 #main-container {
@@ -48,6 +59,22 @@ main {
   display: flex;
   justify-content: space-evenly;
   width: 80%
+}
+
+ul {
+  margin: 0;
+  font-size: 16px
+}
+
+li, a {
+  color: white;
+  font-size: 16px;
+  margin-bottom: 5px;
+  padding-left: 5px
+}
+
+a:active {
+  color: #63F74F
 }
 
 #new-board-input-container {
@@ -64,7 +91,6 @@ input {
   padding: 10px;
   border-radius: 5px;
   overflow: none;
-  margin-top: 10px
 }
 
 input:focus {
