--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
       </h2>
       <div id="main-container">
         <div id="existing-boards-container">
-          <h3>Existing boards:</h3>
+          <h3 id="existing-boards-header">Existing boards:</h3>
           <ul id="existing-board-list">
           </ul>
         </div>
