--- a/public/board.css
+++ b/public/board.css
@@ -97,6 +97,12 @@ button:active {
     transform: perspective(500px) rotateY(30deg);
 }
 
+button:focus {
+    outline: none;
+    box-shadow: none;
+    border: 2px solid white; 
+}
+
 #threads-container {
     width: 100%;
     height: 100%;
@@ -118,6 +124,12 @@ a {
 
 a:active {
     color: #63F74F
+}
+
+a:focus {
+    outline: none;
+    box-shadow: none;
+    border: 2px solid #63F74F; 
 }
 
 .created-on-static, .bumped-on-static {
