--- a/public/index.css
+++ b/public/index.css
@@ -42,7 +42,8 @@ main {
 h3 {
   margin: 0;
   margin-bottom: 40px;
-  margin-top: 20px
+  margin-top: 20px;
+  white-space: nowrap
 }
 
 #existing-boards-header {
@@ -80,7 +81,8 @@ a:active {
 li:focus, a:focus {
   outline: none;
   box-shadow: none;
-  border: 2px solid #63F74F; 
+  border: 2px solid #63F74F;
+  border-radius: 5px
 }
 
 #new-board-input-container {
@@ -117,9 +119,13 @@ button {
 }
 
 button:focus {
-  outline: none;
-  box-shadow: none;
-  border: 2px solid white; 
+  background-color: #16e60f;
+  color: black;
+  transform: scale(1.1);
+  cursor: pointer;
+  user-select: none;
+  transition: background-color 0.2s ease, transform 0.1s ease;
+  border-radius: 5px;
 }
 
 button:hover {
