--- a/public/board.css
+++ b/public/board.css
@@ -16,6 +16,10 @@ body {
     align-items: center
 }
 
+#h1-dynamic-child {
+    color: white
+}
+
 main {
     height: 100%;
     width: 70%;
@@ -105,6 +109,7 @@ button:focus {
     user-select: none;
     transition: background-color 0.2s ease, transform 0.1s ease;
     border-radius: 5px;
+    border: 2px solid #16e60f;
 }
 
 #threads-container {
@@ -134,6 +139,7 @@ a:focus {
     outline: none;
     box-shadow: none;
     border: 2px solid #63F74F; 
+    border-radius: 5px
 }
 
 .created-on-static, .bumped-on-static {
