--- a/public/thread.css
+++ b/public/thread.css
@@ -20,6 +20,10 @@ header {
     margin-top: 75px
 }
 
+#h1-dynamic-child, #h2-dynamic-child {
+    color: white
+}
+
 h2 {
     text-align: center
 }
@@ -162,4 +166,5 @@ button:focus {
     user-select: none;
     transition: background-color 0.2s ease, transform 0.1s ease;
     border-radius: 5px;
+    border: 2px solid #63F74F
 }
