--- a/public/board.css
+++ b/public/board.css
@@ -110,6 +110,7 @@ button:focus {
     transition: background-color 0.2s ease, transform 0.1s ease;
     border-radius: 5px;
     border: 2px solid #16e60f;
+    outline: none
 }
 
 #threads-container {
