--- a/public/index.css
+++ b/public/index.css
@@ -126,6 +126,7 @@ button:focus {
   user-select: none;
   transition: background-color 0.2s ease, transform 0.1s ease;
   border-radius: 5px;
+  outline: none
 }
 
 button:hover {
