--- a/public/index.css
+++ b/public/index.css
@@ -47,7 +47,7 @@ h3 {
 }
 
 #existing-boards-header {
-  margin-bottom: 36px
+  margin-bottom: 36px;
 }
 
 #main-container {
@@ -64,14 +64,14 @@ h3 {
 
 ul {
   margin: 0;
-  font-size: 16px
+  font-size: 16px;
 }
 
 li, a {
   color: white;
   font-size: 16px;
   margin-bottom: 5px;
-  padding-left: 5px
+  margin-right: 50px
 }
 
 a:active {
