--- a/public/index.css
+++ b/public/index.css
@@ -56,6 +56,11 @@ h3 {
   justify-content: space-between
 }
 
+#existing-boards-container {
+  flex: 1;
+  padding-right: 10px
+}
+
 #boards-container {
   display: flex;
   justify-content: space-evenly;
@@ -65,13 +70,14 @@ h3 {
 ul {
   margin: 0;
   font-size: 16px;
+  padding-left: 15px
 }
 
 li, a {
   color: white;
   font-size: 16px;
   margin-bottom: 5px;
-  margin-right: 10px
+  margin-right: 35px;
 }
 
 a:active {
@@ -87,7 +93,8 @@ li:focus, a:focus {
 
 #new-board-input-container {
   display: flex;
-  flex-direction: column
+  flex-direction: column;
+  flex: 1;
 }
 
 input {
@@ -99,6 +106,7 @@ input {
   padding: 10px;
   border-radius: 5px;
   overflow: none;
+  margin-right: 20px
 }
 
 input:focus {
@@ -115,7 +123,8 @@ button {
   padding: 10px;
   border-radius: 5px;
   overflow: none;
-  margin-top: 10px
+  margin-top: 10px;
+  margin-right: 20px
 }
 
 button:focus {
